Fixed mobile issue

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p>I thought mechanical engineering would be my path. I loved the hands-on building. But through building that drone, I realised what really drew me in wasn't just the mechanics, it was the decision-making, the intelligence behind the movement. That's when electronics clicked for me.</p>
                 </div>
                 <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
+                    <h3>Reflections</h3>
                     <p>Moving between cultures taught me to adapt and see problems from different angles. Those early programming projects at 13 were just for fun, I had no idea they'd shape my career. Building that drone was a turning point. I loved the mechanical work, but I realised my passion was in making things think, not just move. Electronics became where hardware met intelligence, and that's where I found myself.</p>
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>Choosing engineering made sense given my interests, but I only truly understood what that meant when I joined Formula Trinity Autonomous in 2021. That's where engineering became real for me.</p>
+                    <p>Choosing engineering made sense given my interests, but I only truly understood what that meant when I joined <a href="https://github.com/FT-Autonomous" target="_blank" rel="noopener">Formula Trinity Autonomous</a> in 2021. That's where engineering became real for me.</p>
                     <div class="chapter-images">
                         <img src="img/Chap2_FT_LOGO.png" alt="Formula Trinity Logo" class="chapter-img">
                     </div>
@@ -88,7 +88,7 @@
                         <img src="img/chap2_FT-Team.jpeg" alt="Formula Trinity Team" class="chapter-img">
                         <img src="img/chap2_FT_Award_best_design.jpeg" alt="Best Design Award" class="chapter-img">
                     </div>
-                    <p>Three years at Formula Student UK taught me what persistence really means. We faced failure after failure, but at Silverstone 2024, we completed our first lap. We won Best Design. And we won Most Cones Knocked, an award that might sound amusing, but represents every iteration, every mistake we learnt from. Those cones were our teachers.</p>
+                    <p>Three years at <a href="https://www.imeche.org/events/formula-student" target="_blank" rel="noopener">Formula Student UK</a> taught me what persistence really means. We faced failure after failure, but at Silverstone 2024, we completed our first lap. We won Best Design. And we won Most Cones Knocked, an award that might sound amusing, but represents every iteration, every mistake we learnt from. Those cones were our teachers.</p>
                     <div class="chapter-images">
                         <img src="img/chap2_Meeting_IEEE_President.jpeg" alt="Meeting IEEE President" class="chapter-img">
                     </div>
@@ -109,11 +109,11 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I was awarded the Laidlaw Research and Leadership Scholarship to conduct research under the supervision of Prof. Harun Siljak. The focus was on adaptive network systems, investigating whether we could control and stabilise complex networks using just a few strategically placed adaptive nodes, rather than trying to control every component.</p>
-                    <p>We designed adaptive models and ran extensive simulations. The work showed that minimal, well-placed intervention can achieve significant stability and synchronisation in complex systems. The research resulted in published reflections and a poster presentation on the effectiveness of adaptive controllable nodes.</p>
+                    <p>I was awarded the <a href="https://laidlawscholars.network/" target="_blank" rel="noopener">Laidlaw Research and Leadership Scholarship</a> to conduct research under the supervision of <a href="https://www.tcd.ie/research/profiles/?profile=siljakh" target="_blank" rel="noopener">Prof. Harun Siljak</a>. The focus was on adaptive network systems, investigating whether we could control and stabilise complex networks using just a few strategically placed adaptive nodes, rather than trying to control every component.</p>
+                    <p>We designed adaptive models and ran extensive simulations. The work showed that minimal, well-placed intervention can achieve significant stability and synchronisation in complex systems. The research resulted in <a href="https://laidlawscholars.network/documents/research-reflection-32b00ac2-0467-45e1-9366-a55925a6006c" target="_blank" rel="noopener">published reflections</a> and a <a href="https://laidlawscholars.network/documents/investigation-of-the-effectiveness-of-introducing-a-few-adaptive-controllable-nodes-in-complex-systems-to-increase-autonomy-and-synchronization" target="_blank" rel="noopener">poster presentation</a> on the effectiveness of adaptive controllable nodes.</p>
                 </div>
                 <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
+                    <h3>Reflections</h3>
                     <p>Research taught me patience. Not every idea works, and that's part of the process. Working with Prof. Siljak showed me the elegance of complex systems, the idea that you don't need complete control to achieve stability. A few strategic nodes can synchronise an entire network. It's a concept that changed how I think about control, not just in networks, but in how I approach problems.</p>
                 </div>
             </div>
@@ -129,11 +129,11 @@
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <p>While studying full-time in Dublin, I needed to support myself. I briefly worked at a local pub, which taught me quickly to respect the pace and demands of hospitality work. It wasn't for me.</p>
-                    <p>I then joined RampInfoTech, a startup providing digital transformation and automation solutions. Working as both a developer and product manager, I learnt to bridge technical implementation with client needs. I developed a Container Tracking Automation system that eliminated over 400 hours of manual work, tracking 4000+ shipments in real-time. I built an internal Travel and Expense Management tool as well. The technical skills (Python, Power BI, SQL, API development) were valuable, but learning to communicate effectively and collaborate across distributed teams was just as important.</p>
-                    <p>In Zagreb, Croatia, I worked with Radiona.org, a non-profit focused on democratising access to technology. I contributed to open-source FPGA development on the ULX3S board, adapting a super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs. The goal was to prove that advanced computation doesn't require expensive hardware. I designed and verified digital logic in Verilog and helped create accessible resources for first-time FPGA developers.</p>
+                    <p>I then joined <a href="https://www.rampinfotech.ie/" target="_blank" rel="noopener">RampInfoTech</a>, a startup providing digital transformation and automation solutions. Working as both a developer and product manager, I learnt to bridge technical implementation with client needs. I developed a Container Tracking Automation system that eliminated over 400 hours of manual work, tracking 4000+ shipments in real-time. I built an internal Travel and Expense Management tool as well. The technical skills (Python, Power BI, SQL, API development) were valuable, but learning to communicate effectively and collaborate across distributed teams was just as important.</p>
+                    <p>In Zagreb, Croatia, I worked with <a href="https://radiona.org/" target="_blank" rel="noopener">Radiona.org</a>, a non-profit focused on democratising access to technology. I contributed to open-source FPGA development on the <a href="https://github.com/ADVIKBAHADUR/ULX3s-Superresolution-CNN" target="_blank" rel="noopener">ULX3S board</a>, adapting a super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs. The goal was to prove that advanced computation doesn't require expensive hardware. I designed and verified digital logic in Verilog and helped create accessible resources for first-time FPGA developers.</p>
                 </div>
                 <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
+                    <h3>Reflections</h3>
                     <p>At RampInfoTech, I learnt that solving real problems for real people requires more than just writing code. It requires understanding needs, iterating on feedback, and building solutions that work in practice. The work in Croatia felt meaningful in a different way. Access to tools shapes who gets to innovate, and contributing to making powerful technology more accessible felt like engineering with purpose.</p>
                 </div>
             </div>
@@ -148,7 +148,7 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I completed a placement at Jaguar Land Rover with the Assisted and Autonomous Driving team, within AI Onboard Perception. The team develops perception tools using onboard vehicle sensors to enable autonomous capabilities.</p>
+                    <p>I completed a placement at <a href="https://www.jaguarlandrover.com/" target="_blank" rel="noopener">Jaguar Land Rover</a> with the Assisted and Autonomous Driving team, within AI Onboard Perception. The team develops perception tools using onboard vehicle sensors to enable autonomous capabilities.</p>
                     <p>My work involved reading research papers, contributing to IP and patent discussions, and writing optimised code for data engineering, synthetic dataset generation, and AI/ML model training. I was mentored by experienced engineers who shaped how I approach complex technical problems.</p>
                     <p>I developed a multi-sensor fusion visualisation tool that unified data from cameras, lidar, radar, and ultrasonic sensors into a single view. This helped identify edge cases, detect faults, and improve our detection systems.</p>
                     <p>During JLR's ACES Challenge, our team developed a mesh-based distributed network for high-security convoy vehicles, enabling automated re-routing, threat detection, and secure communication. We built a simulated proof of concept and demonstrated it on real vehicles. We won the competition and received the award for Most Innovative.</p>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
+                    <h3>Reflections</h3>
                     <p>Working at JLR felt like being in an environment where every day was a learning opportunity. The mentorship I received from experienced engineers taught me to approach problems methodically and think several steps ahead. The ACES Challenge validated that innovative ideas, when properly executed, can translate into real-world applications. Seeing our mesh network system work on actual vehicles made the concept tangible.</p>
                 </div>
             </div>
@@ -172,12 +172,12 @@
             <div class="chapter-content">
                 <div class="work-section">
                     <h3>What I Did</h3>
-                    <p>I'm currently in my final year, my Masters year at Trinity College Dublin, working on Electronic & Computer Engineering.</p>
+                    <p>I'm currently in my final year, my Masters year at <a href="https://www.tcd.ie/" target="_blank" rel="noopener">Trinity College Dublin</a>, working on Electronic & Computer Engineering.</p>
                     <p>My thesis focuses on transistor parasitic model extraction for GaN FETs, aiming to improve device modelling accuracy. It's highly specialised work combining hardware design, simulation, and precision engineering.</p>
                     <p>As part of my coursework, I'm developing a Vision Transformer for a hybrid Quantum Deep Learning network, exploring the intersection of quantum computing and machine learning.</p>
                 </div>
                 <div class="genuine-section">
-                    <h3>Genuine Reflections</h3>
+                    <h3>Reflections</h3>
                     <p>Everything I've done has led to this point. My thesis on GaN FET modelling brings together the hardware work and precision I've developed through years of FPGA development and embedded systems. The quantum deep learning project pushes me into new territory, much like I pushed into programming at 13. From building a drone in my room to modelling transistors at the device level, the journey has been about staying curious and committed. I'm ready to see where the next chapter takes me.</p>
                 </div>
             </div>
