Added sitemap for indexing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advik Bahadur - Journey</title>
+    <meta name="description" content="Advik Bahadur - Computer Engineering student at Trinity College Dublin. Formula Trinity Captain, Laidlaw Scholar, JLR placement student. Portfolio showcasing autonomous systems, FPGA development, and AI/ML projects.">
+    <meta name="keywords" content="Advik Bahadur, Computer Engineering, Formula Trinity, Laidlaw Scholar, FPGA, Machine Learning, Autonomous Systems, Trinity College Dublin, Formula Student, Jaguar Land Rover">
+    <meta name="author" content="Advik Bahadur">
+    
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="Advik Bahadur - Engineering Journey">
+    <meta property="og:description" content="Computer Engineering student specializing in autonomous systems, FPGA development, and AI/ML">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://advikbahadur.com/">
+    <meta property="og:image" content="https://advikbahadur.com/img/My_picture.jpeg">
+    
+    <title>Advik Bahadur - Computer Engineering Student | Formula Trinity Captain | Laidlaw Scholar</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -197,6 +209,35 @@
             </ul>
         </div>
     </section>
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Advik Bahadur",
+      "jobTitle": "Computer Engineering Student",
+      "affiliation": {
+        "@type": "EducationalOrganization",
+        "name": "Trinity College Dublin"
+      },
+      "url": "https://advikbahadur.com/",
+      "sameAs": [
+        "https://www.linkedin.com/in/advik-bahadur/",
+        "https://github.com/ADVIKBAHADUR",
+        "https://laidlawscholars.network/profile/advik-bahadur"
+      ],
+      "alumniOf": "Trinity College Dublin",
+      "knowsAbout": [
+        "Computer Engineering",
+        "Autonomous Systems",
+        "FPGA Development",
+        "Machine Learning",
+        "Control Systems",
+        "Formula Student"
+      ]
+    }
+    </script>
 
     <script src="script.js"></script>
 </body>
