--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advik Bahadur - Portfolio</title>
+    <meta name="description" content="Advik Bahadur's project portfolio - FPGA super-resolution, pedestrian detection, F1 prediction game, distributed systems, and more engineering projects.">
+    <meta name="keywords" content="Advik Bahadur, Portfolio, FPGA, Computer Vision, Machine Learning, Engineering Projects, ULX3S, Python, Verilog">
+    <meta name="author" content="Advik Bahadur">
+    
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="Advik Bahadur - Project Portfolio">
+    <meta property="og:description" content="Engineering projects in FPGA development, computer vision, machine learning, and distributed systems">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://advikbahadur.com/portfolio.html">
+    
+    <title>Advik Bahadur - Project Portfolio | FPGA | Computer Vision | Machine Learning</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
