--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Advik Bahadur - Computer Engineering student at Trinity College Dublin. Formula Trinity Captain, Laidlaw Scholar, JLR placement student. Portfolio showcasing autonomous systems, FPGA development, and AI/ML projects.">
-    <meta name="keywords" content="Advik Bahadur, Computer Engineering, Formula Trinity, Laidlaw Scholar, FPGA, Machine Learning, Autonomous Systems, Trinity College Dublin, Formula Student, Jaguar Land Rover">
+    <meta name="description" content="Advik Bahadur - AI, Embedded Systems, Digital Design">
+    <meta name="keywords" content="Advik Bahadur, AI, Embedded Systems, Digital Design, Computer Engineering, Trinity College Dublin">
     <meta name="author" content="Advik Bahadur">
     
     <!-- Open Graph for social sharing -->
-    <meta property="og:title" content="Advik Bahadur - Engineering Journey">
-    <meta property="og:description" content="Computer Engineering student specializing in autonomous systems, FPGA development, and AI/ML">
+    <meta property="og:title" content="Advik Bahadur">
+    <meta property="og:description" content="AI, Embedded Systems, Digital Design">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://advikbahadur.com/">
     <meta property="og:image" content="https://advikbahadur.com/img/My_picture.jpeg">
     
-    <title>Advik Bahadur - Computer Engineering Student | Formula Trinity Captain | Laidlaw Scholar</title>
+    <title>Advik Bahadur - AI, Embedded Systems, Digital Design</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
