Added ramp and radiona logos

--- a/index.html
+++ b/index.html
@@ -141,8 +141,15 @@
                 <div class="work-section">
                     <h3>What I Did</h3>
                     <p>While studying full-time in Dublin, I needed to support myself. I briefly worked at a local pub, which taught me quickly to respect the pace and demands of hospitality work. It wasn't for me.</p>
+                    <div class="chapter-images">
+                        <img src="img/ramp_white.png" alt="RampInfoTech Logo" class="chapter-img" style="max-width: 200px;">
+                    </div>
                     <p>I then joined <a href="https://www.rampinfotech.ie/" target="_blank" rel="noopener">RampInfoTech</a>, a startup providing digital transformation and automation solutions. Working as both a developer and product manager, I learnt to bridge technical implementation with client needs. I developed a Container Tracking Automation system that eliminated over 400 hours of manual work, tracking 4000+ shipments in real-time. I built an internal Travel and Expense Management tool as well. The technical skills (Python, Power BI, SQL, API development) were valuable, but learning to communicate effectively and collaborate across distributed teams was just as important.</p>
+                    <div class="chapter-images">
+                        <img src="img/radiona_logo.png" alt="Radiona Logo" class="chapter-img" style="max-width: 200px;">
+                    </div>
                     <p>In Zagreb, Croatia, I worked with <a href="https://radiona.org/" target="_blank" rel="noopener">Radiona.org</a>, a non-profit focused on democratising access to technology. I contributed to open-source FPGA development on the <a href="https://github.com/ADVIKBAHADUR/ULX3s-Superresolution-CNN" target="_blank" rel="noopener">ULX3S board</a>, adapting a super-resolution deep learning model to run on resource-constrained Lattice ECP5 FPGAs. The goal was to prove that advanced computation doesn't require expensive hardware. I designed and verified digital logic in Verilog and helped create accessible resources for first-time FPGA developers.</p>
+                    <p><em>"During his program and residence he will partake regular Radiona activities in the tech fields regarding the FPGA technology, open source robotics, IoT and LoRa Wan – Smart City related topics."</em> — <a href="https://radiona.org/advik-bahadur-in-ie-trinity-college-laidlaw-leadership-in-action-scholar-and-engineer-in-resident-radiona/" target="_blank" rel="noopener">Radiona.org</a></p>
                 </div>
                 <div class="genuine-section">
                     <h3>Reflections</h3>
@@ -204,6 +211,7 @@
                 <li><a href="https://laidlawscholars.network/documents/research-reflection-32b00ac2-0467-45e1-9366-a55925a6006c" target="_blank">Laidlaw Research Reflection - Adaptive Network Systems</a></li>
                 <li><a href="https://laidlawscholars.network/documents/investigation-of-the-effectiveness-of-introducing-a-few-adaptive-controllable-nodes-in-complex-systems-to-increase-autonomy-and-synchronization" target="_blank">Research Poster - Adaptive Controllable Nodes in Complex Systems</a></li>
                 <li><a href="https://www.rampinfotech.ie/" target="_blank">RampInfoTech Ltd - Digital Transformation & Automation</a></li>
+                <li><a href="https://radiona.org/advik-bahadur-in-ie-trinity-college-laidlaw-leadership-in-action-scholar-and-engineer-in-resident-radiona/" target="_blank">Radiona.org - Engineer-in-Residence Feature</a></li>
                 <li><a href="https://laidlawscholars.network/posts/lia-blog-fpga-s-and-the-digital-divide" target="_blank">Blog - FPGAs and the Digital Divide</a></li>
                 <li><a href="https://laidlawscholars.network/documents/3-minute-thesis-fpgas-for-all" target="_blank">3-Minute Thesis - FPGAs for All</a></li>
             </ul>
